<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/martel"
        android:text="@string/app_name_9"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="411dp"
        android:layout_height="67dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_knopka"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/app_name_11" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name_11"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_knopka"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="411dp"
        android:layout_height="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name_11"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_knopka"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="411dp"
        android:layout_height="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name_11"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_knopka"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="411dp"
        android:layout_height="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name_11"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/ic_knopka"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="411dp"
        android:layout_height="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name_11"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/ic_knopka"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/martel"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/app_name_10"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black"
        android:textColorLink="@color/purple_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.368"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/martel"
        android:gravity="center"
        android:inputType="date"
        android:text="@string/app_name_12"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black"
        android:textColorLink="@color/purple_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/martel"
        android:gravity="center"
        android:inputType="number"
        android:text="Номер телефона"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black"
        android:textColorLink="@color/purple_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/martel"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:text="@string/app_name_14"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black"
        android:textColorLink="@color/purple_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/martel"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/app_name_5"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black"
        android:textColorLink="@color/purple_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/martel"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/app_name_15"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/black"
        android:textColorLink="@color/purple_200"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:fontFamily="@font/martel"
        android:gravity="center"
        android:onClick="onClick3"
        android:text="@string/app_name_16"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/pink_3"
        app:cornerRadius="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>