<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/martel"
            android:foregroundGravity="center"
            android:text="@string/app_name21"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name26"
            android:src="@drawable/ic_vadrat_rama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/app_name26"
            android:src="@drawable/ic_vadrat_rama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/app_name26"
            android:src="@drawable/ic_vadrat_rama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/app_name26"
            android:src="@drawable/ic_vadrat_rama"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="219dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/martel"
            android:foregroundGravity="center"
            android:text="@string/app_name22"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="215dp"
            android:layout_height="55dp"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/martel"
            android:foregroundGravity="center"
            android:text="@string/app_name23"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="222dp"
            android:layout_height="52dp"
            android:layout_marginTop="68dp"
            android:fontFamily="@font/martel"
            android:foregroundGravity="center"
            android:text="@string/app_name24"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="209dp"
            android:layout_height="56dp"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/martel"
            android:foregroundGravity="center"
            android:text="@string/app_name25"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.055" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_akciaa_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="156dp"
            android:layout_height="153dp"
            android:src="@mipmap/ic_launcher_pedikur_alcia_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="168dp"
            android:layout_height="148dp"
            android:src="@mipmap/ic_launcher_odn_akcia"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintEnd_toEndOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="153dp"
            android:layout_height="153dp"
            android:src="@mipmap/ic_launcher_maslo_akcia_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="@+id/imageView13" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>